# neuro-ranker-distill

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  distill_student.py  docker-compose.yaml  eval_rankers.py  manage.py  pyproject.toml  requirements.txt  train_teacher.py
.github/workflows/: tests.yaml
configs/: settings.yaml
ranker_service/: main.py
scripts/: build_bm25_index.py  build_release_model.sh  export_onnx.py  latency_bench.py  prepare_msmarco.py  quantize_onnx.py
src/neuro_ranker/: bm25.py  click_sim.py  datasets.py  freshness.py  losses.py  metrics.py  safety.py  trainer_student.py  trainer_teacher.py  utils.py
src/neuro_ranker/service/: app.py  onnx_encoder.py
tests/: test_api.py
training_pipeline/: distill_student.py  eval_rankers.py  train_teacher.py
