[project]
name = "neuro-ranker-distill"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"

# --- START OF MODIFICATION ---
# Dependencies are now listed here, replacing requirements.txt
dependencies = [
    "torch>=2.2",
    "transformers>=4.41",
    "datasets>=2.20",
    "sentence-transformers>=3.0",
    "pyserini>=0.24.0",
    "faiss-cpu>=1.8.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0.1",
    "tqdm>=4.66",
    # Service & ONNX
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "onnx>=1.16",
    "onnxruntime==1.22.1",
    # Testing & misc
    "httpx>=0.27"
]

# This section creates the new 'neurorank' command
[project.scripts]
neurorank = "manage:main"

# This section tells setuptools how to find your packages
[tool.setuptools.packages.find]
# Look for packages in the 'src' directory (finds 'neuro_ranker')
# and in the root directory (finds 'ranker_service' and 'training_pipeline')
where = ["src", "."]
include = ["neuro_ranker*", "ranker_service*", "training_pipeline*"]
# --- END OF MODIFICATION ---

[tool.pyright]
venvPath = "."
venv = ".venv"